packages/isar/test/errors/class/private.dart
// must be public

import 'package:isar/isar.dart';

@collection
// ignore: unused_element
class _Model {
  late int id;
}
